--- a/src/server/static/css/styles.css
+++ b/src/server/static/css/styles.css
@@ -75,6 +75,19 @@ a:visited {
   color: var(--text-colour);
 }
 
+iframe.fullscreen {
+  position: fixed;
+  top: 100px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100vw;
+  height: calc(100vh - 100px);
+  padding: 30px;
+  border: 0;
+  z-index: 1;
+}
+
 sup {
   vertical-align: top;
 }
