added top navigation to all routes (except /ping)

--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -1,3 +1,5 @@
+{{> navigation routes=data/routes password=data/password path=data/path }}
+
 <h1>{{{heading}}}</h1>
 
 {{> breadcrumbs current=current }}
