--- a/src/server/views/say.handlebars
+++ b/src/server/views/say.handlebars
@@ -1,3 +1,5 @@
+{{> navigation routes=data/routes password=data/password path=data/path }}
+
 <h1>{{{heading}}}</h1>
 
 {{> breadcrumbs current=current }}
