public path nav links should not add an empty 'password' query param

--- a/src/server/views/partials/navigation.handlebars
+++ b/src/server/views/partials/navigation.handlebars
@@ -6,7 +6,7 @@
           {{#if (either this.public ../password)}}
             <li>
               <a
-                href="{{@key}}?password={{../password}}"
+                href="{{@key}}{{#if ../password}}?password={{../password}}{{/if}}"
                 target="_blank"
               >{{initIfFalsy (unprefix "/" @key) "home"}}</a>
             </li>
