Split CSS into separate files

--- a/src/server/static/css/styles.css
+++ b/src/server/static/css/styles.css
@@ -1,261 +1,7 @@
-:root {
-  --heading-colour: #000;
-  --text-colour: #000;
-  --link-colour: rgb(0, 0, 139);
-  --border-colour: #999;
-  --margin-size: 40px;
-  --smaller-font-size: 0.85em;
-  --main-colour: rgb(242, 232, 222);
-}
-
-* {
-  font-family: Arial, sans-serif;
-  line-height: 1.3;
-  color: var(--text-colour);
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 30px;
-  font-size: 1em;
-  background-color: var(--main-colour);
-  overflow-x: hidden;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 1.3em 0 0.5em;
-}
-
-h1:first-child {
-  margin-top: 10px;
-}
-
-h1 {
-  font-size: 1.4em;
-  color: var(--heading-colour);
-}
-
-h2 {
-  font-size: 1.2em;
-  color: var(--heading-colour);
-}
-
-nav {
-  font-size: var(--smaller-font-size);
-}
-
-nav .navitem {
-  text-decoration: none;
-}
-
-nav .navitem:last-child {
-  font-weight: bold;
-}
-
-ol,
-ul {
-  padding-inline-start: 20px;
-  padding-left: 20px;
-}
-
-li {
-  margin: 0.2em 0;
-}
-
-a {
-  color: var(--link-colour);
-}
-
-a:visited {
-  color: var(--text-colour);
-}
-
-iframe.fullscreen {
-  position: fixed;
-  top: 80px;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100vw;
-  height: calc(100vh - 80px);
-  padding: 30px;
-  border: 0;
-  z-index: 1;
-}
-
-sup {
-  vertical-align: top;
-}
-
-blockquote {
-  margin: 2em 0 1.3em;
-}
-
-h2 + table {
-  margin-top: 0;
-}
-
-table {
-  min-width: 280px;
-  width: 100%;
-  margin: 2em 0;
-}
-
-.smaller-table {
-  margin: 1em 0;
-  font-size: var(--smaller-font-size);
-}
-
-h2 + table {
-  margin-top: 0;
-}
-
-table,
-th,
-td {
-  padding: 6px 10px;
-  border: 1px solid var(--border-colour);
-  border-collapse: collapse;
-}
-
-th,
-td {
-  vertical-align: top;
-}
-
-th:first-child,
-td:first-child {
-  white-space: nowrap;
-}
-
-th:last-child,
-td:last-child {
-  min-width: 200px;
-  width: 80%;
-}
-
-th {
-  text-align: left;
-  white-space: nowrap;
-}
-
-td .list {
-  margin: 0;
-  font-size: var(--smaller-font-size);
-}
-
-/* Smaller tables */
-.table-small {
-  font-size: var(--smaller-font-size);
-}
-
-.table-small th,
-.table-small td {
-  min-width: 0;
-  padding: 3px 8px;
-}
-
-.table-small th:first-child,
-.table-small td:first-child {
-  white-space: nowrap;
-}
-
-/* Nested tables */
-.nested {
-  width: calc(100% + 22px);
-  margin: -7px -11px;
-  font-size: var(--smaller-font-size);
-}
-
-.table-small .nested,
-.nested .nested {
-  width: calc(100% + 18px);
-  margin: -4px -9px;
-  font-size: 0.9em;
-}
-
-.nested th,
-.nested td {
-  min-width: 40px;
-  padding: 3px 8px;
-}
-
-.nested th:first-child,
-.nested td:first-child {
-  width: 20%;
-}
-
-.nested th:last-child,
-.nested td:last-child {
-  min-width: 0;
-}
-
-pre {
-  max-width: 550px;
-  margin: 0;
-  overflow: auto;
-  font-size: var(--smaller-font-size);
-  font-family: monospace;
-  background: #e6e6e6;
-  padding: 3px 6px;
-  white-space: pre-wrap;
-  word-break: break-word;
-}
-
-td:empty::before,
-pre:empty::before {
-  content: "(none)";
-  font-style: italic;
-  font-size: 0.9rem;
-  color: var(--border-colour);
-}
-
-form {
-  max-width: 800px;
-  margin: 2em 0 3em;
-}
-
-form * {
-  font-size: 0.9rem;
-}
-
-form label {
-  font-weight: bold;
-}
-
-form input,
-form textarea {
-  display: block;
-  width: 100%;
-  margin-bottom: 1em;
-  padding: 8px 12px;
-  border-radius: 5px;
-  border: 1px solid var(--border-colour);
-}
-
-form input::placeholder {
-  color: #ccc;
-  font-size: var(--smaller-font-size);
-}
-
-form textarea {
-  min-height: 130px;
-}
-
-form button {
-  padding: 8px 20px;
-  font-size: 1em;
-}
-
-form .form-controls {
-  margin: 1.5em 0;
-}
+@import "_general.css";
+@import "_header.css";
+@import "_tables.css";
+@import "_forms.css";
 
 .dashboard {
   display: flex;
@@ -329,138 +75,4 @@ form .form-controls {
   top: -1px;
   font-size: var(--smaller-font-size);
   font-style: italic;
-}
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-[data-prefix]:before {
-  content: attr(data-prefix);
-}
-
-[data-suffix]:after {
-  content: attr(data-suffix);
-}
-
-.mt10 {
-  margin-top: 10px;
-}
-
-.mt20 {
-  margin-top: 20px;
-}
-
-.mt40 {
-  margin-top: 40px;
-}
-
-@media (max-width: 767px) {
-  body {
-    padding: 20px 20px;
-    font-size: var(--smaller-font-size);
-    word-break: break-word;
-  }
-
-  blockquote {
-    margin: 1.5em 0;
-  }
-
-  table {
-    max-width: none;
-    width: 100%;
-    border: none;
-    border-left: 1px solid var(--border-colour);
-  }
-
-  tr {
-    display: flex;
-    align-content: stretch;
-    align-items: stretch;
-    flex-direction: column;
-    margin: 15px 0;
-  }
-
-  th,
-  td {
-    border: none;
-    padding: 2px 15px;
-    padding-right: 0;
-  }
-
-  tr:first-child {
-    margin-top: 0;
-  }
-
-  tr:last-child {
-    margin-bottom: 0;
-  }
-
-  .nested,
-  .nested .nested {
-    margin: 0;
-  }
-
-  table thead,
-  .nested thead {
-    display: none;
-  }
-
-  .nested tr {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin: initial;
-  }
-
-  .nested th,
-  .nested td {
-    flex: 0 1 auto;
-    padding-left: 0;
-    padding-right: 3px;
-  }
-
-  .nested th::after,
-  .nested td::after {
-    content: ",";
-  }
-
-  .nested th:first-child::after,
-  .nested td:first-child::after,
-  .nested th:last-child::after,
-  .nested td:last-child::after {
-    content: "";
-  }
-
-  .nested th:nth-child(-n + 2),
-  .nested td:nth-child(-n + 2) {
-    padding-left: 10px;
-  }
-
-  th:first-child,
-  td:first-child {
-    font-weight: bold;
-  }
-
-  th:last-child,
-  td:last-child {
-    min-width: 0;
-    width: auto;
-  }
-
-  pre {
-    max-width: none;
-    white-space: pre-wrap;
-    word-break: break-word;
-  }
-
-  .dashboard section {
-    flex-basis: 100%;
-    max-width: none;
-    margin-right: 0;
-  }
-
-  .mobile-hidden {
-    display: none;
-  }
 }
