--- a/src/server/views/say.handlebars
+++ b/src/server/views/say.handlebars
@@ -19,7 +19,7 @@
 
 <div class="chat-transcript">
     <h3>Recent Chat Messages</h3>
-    <table class="smaller-table">
+    <table class="table-small">
         <thead>
             <tr>
                 <th>Message ID</th>
