--- a/src/server/static/css/_general.css
+++ b/src/server/static/css/_general.css
@@ -17,10 +17,16 @@
 
 body {
   margin: 0;
-  padding: 30px;
+  padding: 0;
   font-size: 1em;
   background-color: var(--main-colour);
   overflow-x: hidden;
+}
+
+main {
+  max-width: 2560px;
+  margin: 0 auto 1.5em;
+  padding: 0 1.5em;
 }
 
 h1,
