--- a/src/server/views/layouts/main.handlebars
+++ b/src/server/views/layouts/main.handlebars
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <link rel="stylesheet" href="/css/header.css" />
 </head>
 
 <body>
-
-{{{body}}}
+    <main>
+        {{{body}}}
+    </main>
 
     <script src="/js/script.js"></script>
 </body>
