main element was already used

--- a/src/server/views/layouts/main.handlebars
+++ b/src/server/views/layouts/main.handlebars
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <main>
+    <div class="container">
         {{{body}}}
-    </main>
+    </div>
 
     <script src="/js/script.js"></script>
 </body>
