Move nav menu label into dropdown

--- a/src/server/views/partials/navigation.handlebars
+++ b/src/server/views/partials/navigation.handlebars
@@ -1,8 +1,7 @@
 <header>
   <nav class="main-nav">
-    <label for="nav">Menu:</label>
     <select id="nav">
-      <option selected="selected"></option>
+      <option selected="selected">Menu</option>
       {{#each routes}}
       {{#unlessEquals @key ../path}}
         {{#if (either this.public ../password)}}
