--- a/src/server/static/css/_header.css
+++ b/src/server/static/css/_header.css
@@ -17,4 +17,9 @@ header {
 .main-nav select {
   padding: 0.5em 1.5em 0.5em 0.6em;
   cursor: pointer;
+  opacity: 0.7;
+}
+
+.main-nav select option[selected]:first-child {
+  display: none;
 }
