added 'dateCancelled' property to the Election class; added 'dateCancelled' display to the dashboard;

--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -44,6 +44,7 @@
                 <tr><td>Primary date</td><td>{{#if datePrimary}}{{> relativetime date=datePrimary}}{{/if}}</td></tr>
                 <tr><td>Election date</td><td>{{> relativetime date=dateElection}}</td></tr>
                 <tr><td>End date</td><td>{{> relativetime date=dateEnded}}</td></tr>
+                <tr><td>Cancelled date</td><td>{{#if dateCancelled}}{{> relativetime date=dateCancelled}}{{/if}}</td></tr>
                 <tr><td>Rep. to vote</td><td>{{repVote}}</td></tr>
                 <tr><td>Rep. to nominate</td><td>{{repNominate}}</td></tr>
                 <tr><td>Positions</td><td>{{numPositions}}</td></tr>
