--- a/src/server/views/index.handlebars
+++ b/src/server/views/index.handlebars
@@ -53,6 +53,44 @@
                 <tr><td>BLT file URL</td><td>{{{url (getter this "electionBallotURL")}}}</td></tr>
             </table>
 
+            <h2>Election History</h2>
+            {{#if (len elections)}}
+            <table class="table-small">
+                <thead>
+                    <tr>
+                        <th>Link</th>
+                        <th>Year</th>
+                        <th>Rep. Nominate</th>
+                        <th>Rep. Vote</th>
+                        <th>Had Primary</th>
+                        <th>Cancelled</th>
+                        <th>Positions</th>
+                        <th>Nominees</th>
+                        <th>Withdrawn</th>
+                        <th>Winners</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {{#iterate elections}}
+                <tr>
+                    <td><a href="{{electionUrl}}">{{electionNum}}</a>{{#ifEquals electionNum @root/data/election/electionNum}} (current){{/ifEquals}}</td>
+                    <td>{{year dateNomination}}</td>
+                    <td>{{repNominate}}</td>
+                    <td>{{repVote}}</td>
+                    <td>{{{yesno datePrimary}}}</td>
+                    <td>{{{yesno (contextCall "isCancelled" this)}}}</td>
+                    <td>{{numPositions}}</td>
+                    <td>{{len nominees}}</td>
+                    <td>{{len withdrawnNominees}}</td>
+                    <td>{{len arrWinners}}</td>
+                </tr>
+                {{/iterate}}
+                </tbody>
+            </table>
+            {{else}}
+                {{> emptySmallTable }}
+            {{/if}}
+
             <h2>Election Announcements</h2>
             {{#if (len announcements)}}
             <table class="table-small">
