--- a/src/server/views/config.handlebars
+++ b/src/server/views/config.handlebars
@@ -4,7 +4,7 @@
 
 {{> breadcrumbs current=current }}
 
-<form method="post">
+<form method="post" class="equal-columns">
 
     {{{data/statusText}}}
 
