--- a/src/server/static/css/_general.css
+++ b/src/server/static/css/_general.css
@@ -147,6 +147,18 @@ pre:empty::before {
   color: var(--border-colour);
 }
 
+.equal-columns {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1vw;
+}
+
+.equal-columns > * {
+  flex-basis: calc(50% - 1vw - 3em);
+  min-width: 256px;
+  max-width: 512px;
+}
+
 @media (max-width: 767px) {
   body {
     padding: 20px 20px;
